# kerberos-simple

./: Kerberos.sln  README.md
client_ui/: Cargo.toml  as_rep  as_rep_enc_part  cfg.yaml  tgs_rep  tgs_rep_enc_part
client_ui/src/: cli.rs  client.rs  config.rs  get_ticket_handler.rs  lib.rs  list_ticket_handler.rs  main.rs  send_ap_req_handler.rs
kerberos/: Cargo.toml
kerberos-infra/: Cargo.toml
kerberos-infra/src/: lib.rs
kerberos-infra/src/cache/: cacheable.rs  mod.rs
kerberos-infra/src/client/: entry.rs  guard.rs  mod.rs  tcp_client.rs  tcp_client_guard.rs  udp_client.rs  utils.rs
kerberos-infra/src/client/tcp/: entry.rs  mod.rs
kerberos-infra/src/client/udp/: mod.rs
kerberos-infra/src/server/: builder.rs  entry.rs  errors.rs  mod.rs  receiver.rs  runnable.rs  utils.rs
kerberos-infra/src/server/config/: cache.rs  database.rs  mod.rs  protocol.rs  server.rs
kerberos-infra/src/server/infra/: mod.rs
kerberos-infra/src/server/infra/cache/: cacheable.rs  mod.rs
kerberos-infra/src/server/infra/database/: mod.rs
kerberos-infra/src/server/infra/database/domain/: encrypt.rs  key.rs  mod.rs  principal.rs  ticket_policy.rs
kerberos-infra/src/server/infra/database/postgres/: mod.rs  settings.rs
kerberos-infra/src/server/infra/database/sqlite/: mod.rs  settings.rs
kerberos-infra/src/server/infra/host/: builder.rs  entry.rs  error.rs  mod.rs  receiver.rs  runnable.rs  utils.rs
kerberos-infra/src/server/infra/host/tcp/: entry.rs  mod.rs  router.rs
kerberos-infra/src/server/infra/host/tests/: mocks.rs  tcp.rs  udp.rs
kerberos-infra/src/server/infra/host/udp/: entry.rs  (+2 more)
kerberos-infra/src/server/tcp/: builder.rs  entry.rs  mod.rs  router.rs
kerberos-infra/src/server/tests/: mocks.rs  mod.rs  tcp.rs  udp.rs
kerberos-infra/src/server/udp/: builder.rs  entry.rs  mod.rs  router.rs
kerberos-infra/tests/: main.rs
kerberos-infra/tests/mocks/: mappers.rs  mod.rs  receivers.rs
kerberos/src/: algo.rs  cryptographic_hash.rs  cryptography.rs  cryptography_error.rs  lib.rs  main.rs  service_traits.rs
kerberos/src/application_authentication_service/: mod.rs  tests.rs  traits.rs
kerberos/src/application_authentication_service/tests/: mod.rs
kerberos/src/authentication_service/: mod.rs  tests.rs  traits.rs
kerberos/src/client/: ap_exchange.rs  as_exchange.rs  client_env.rs  client_env_error.rs  client_error.rs  guard.rs  kdc_exchange.rs  mod.rs  tgs_exchange.rs  udp_client_guard.rs  util.rs
kerberos/src/database/: database.rs  mod.rs
kerberos/src/kdc/: mod.rs
kerberos/src/kdc_srv/: configs.rs  mod.rs
kerberos/src/kdc_srv/npgl/: receivers.rs  types.rs
kerberos/src/kdc_srv/tests/: mod.rs
kerberos/src/kdc_srv/tests/config/: base.yaml
kerberos/src/kdc_srv/tests/database/: local.yaml  prod.yaml
kerberos/src/kdc_srv/tests/server/: prod.yaml
kerberos/src/npgl_kdc_server/: mod.rs  receivers.rs  types.rs
kerberos/src/servers/: guard.rs  mod.rs  tcp_server.rs  udp_server.rs
kerberos/src/tests_common/: mocked.rs  mod.rs
kerberos/src/ticket_granting_service/: mod.rs
kerberos/src/ticket_granting_service/tests/: mocked.rs  mod.rs
kerberos/src/transport/: mod.rs  tcp_transport.rs  udp_transport.rs
kerberos/src/transporters/: mod.rs  tcp_transporter.rs  udp_transporter.rs
kerberos/tests/: integration_test.rs  tests.rs
kerberos/tests/common/: mocked.rs  mod.rs
kerberos_app_srv/: Cargo.toml
kerberos_app_srv/database/: base.yaml
kerberos_app_srv/server/: base.yaml
kerberos_app_srv/src/: client_address_storage.rs  database.rs  handleable.rs  handler.rs  handlers.rs  lib.rs  main.rs  replay_cache.rs  session_storage.rs  utils.rs
kerberos_app_srv/src/auth_cache/: auth_cache.rs  mod.rs
kerberos_app_srv/src/authentication/: authentication_request.rs  authentication_response.rs  mod.rs
kerberos_app_srv/src/client_address_storage/: mod.rs
kerberos_app_srv/src/replay_cache/: error.rs  mod.rs  replay_cache.rs
kerberos_app_srv/src/session_storage/: error.rs  mod.rs  session_storage.rs
kerberos_app_srv/src/user_profile/: error.rs  mod.rs  user_profile.rs  user_profile_request.rs  user_profile_response.rs
kerberos_kdc/: Cargo.toml
kerberos_kdc/config/: base.yaml
kerberos_kdc/src/: lib.rs  main.rs
kerberos_kdc/src/kdc_srv/: configs.rs
kerberos_kdc/src/kdc_srv/npgl/: mod.rs  receivers.rs  types.rs
messages/: Cargo.toml
messages/src/: as_rep.rs  as_req.rs  back_to_enum.rs  basic.rs  enc_as_rep_part.rs  enc_kdc_rep_part.rs  enc_krb_cred_part.rs  enc_tgs_rep_part.rs  kdc_rep.rs  kdc_req.rs  kdc_req_body.rs  krb_cred.rs  krb_cred_info.rs  krb_error.rs  krb_safe.rs  last_req.rs  lib.rs  tgs_rep.rs  tgs_req.rs  tickets.rs
messages/src/basic/: constants.rs  kerberos_flags.rs  kerberos_string.rs  kerberos_time.rs  mod.rs  predefined_values.rs
messages/src/basic/test/: mod.rs  utils.rs
messages/src/client/: client.rs
messages/src/cs_message/: authenticator.rs  enc_ap_rep_part.rs  krb_ap_rep.rs  krb_ap_req.rs  mod.rs
messages/src/kdc/: mod.rs
messages/src/krb_cred_spec/: enc_krb_cred_part.rs  krb_cred.rs  krb_cred_info.rs  mod.rs
messages/src/krb_error_spec/: mod.rs  test.rs
messages/src/krb_priv_spec/: enc_krb_priv_part.rs  krb_priv.rs  mod.rs
messages/src/krb_safe_spec/: mod.rs  test.rs
messages/src/servers/: authenticate_server.rs  mod.rs  server.rs  tgs.rs
messages/src/spec_as_tgs_exchange/: as_rep.rs  as_req.rs  enc_as_rep_part.rs  enc_kdc_rep_part.rs  enc_tgs_rep_part.rs  kdc_options.rs  kdc_rep.rs  kdc_req.rs  kdc_req_body.rs  last_req.rs  mod.rs  tgs_rep.rs  tgs_req.rs
messages/src/tickets/: enc_ticket_part.rs  mod.rs  test.rs  transited_encoding.rs
messages/tests/: api.rs
(+91 files in other folders)
