[package]
name = "kerberos-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
async-trait = "0.1"
tokio-cache = "0.2.0-alpha.1"
lru = "0.12.4"

[dev-dependencies]
rand = "0.8.5"
der = { version = "0.7.9", features = ["alloc", "std"] }

[features]
default = ["full"]
full = ["client", "server"]

# Client
client = ["client-tcp", "client-udp"]
client-tcp = []
client-udp = []

# Server
server = ["server-tcp", "server-udp"]
server-tcp = []
server-udp = []
