[package]
name = "kerberos"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
derive_builder = "0.20.1"
rand = "0.8.5"
async-trait = "0.1.82"
der = { version = "0.7.9", features = ["alloc", "derive", "std"] }
aes-gcm = "0.10.3"
sha1 = "0.10.6"
messages = { path = "../messages" }

[dev-dependencies]
lazy_static = "1.5.0"