[package]
name = "kerberos_app_srv"
version = "0.1.0"
edition = "2021"

[dependencies]
kerberos = { path = "../kerberos" }
kerberos_infra = { path = "../kerberos_infra", features = ["server-tcp"] }
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version = "0.8", features = ["serde"] }
validator = "0.18.1"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
rand = { version = "0.8", features = ["std_rng"] }
serde_json = "1"
futures-util = "0.3.30"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ] }
