[package]
name = "kerberos_kdc"
version = "0.1.0"
edition = "2021"

[dependencies]
kerberos = { path = "../kerberos" }
messages = { path = "../messages" }
tokio = { version = "1.0.1", features = ["full"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
async-trait = "0.1.82"
kerberos_infra = { path = "../kerberos_infra" }
der = { version = "0.7.9", features = ["derive", "std", "alloc"]}